[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalflow-labs"
version = "0.8.0"
description = "Neural network and RL extension for signalflow (torch/lightning/SB3)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "signalflow-trading>=0.8.0",
  "torch>=2.2",
  "lightning>=2.5",
]

[project.optional-dependencies]
# Reinforcement-learning strategy (RLStrategy + flow env).
rl = [
  "stable-baselines3>=2.0",
  "gymnasium>=0.29",
]
test = [
  "pytest>=8.0",
  "ruff>=0.8",
  "stable-baselines3>=2.0",
  "gymnasium>=0.29",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["signalflow.labs*"]

[project.entry-points."signalflow.components"]
labs = "signalflow.labs"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]